fixed element stretching

--- a/src/styles/blocks/buttons.scss
+++ b/src/styles/blocks/buttons.scss
@@ -25,7 +25,7 @@
     margin-top: 16px;
     margin-bottom: 16px;
     background-color: #ae1c23;
-    width: 280px;
+    width: 100%;
 
     @include onTablet {
       width: 288px;
