--- a/src/styles/blocks/form-box.scss
+++ b/src/styles/blocks/form-box.scss
@@ -2,7 +2,7 @@
   &-box {
     margin-top: 48px;
     height: 396px;
-    width: 280px;
+    width: 100%;
 
     @include onTablet {
       width: 288px;
