--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -17,7 +17,7 @@
     width: 288px;
   }
 
-  @include onLaptop {
+  @media (min-width: 1008px) {
     width: 560px;
   }
 }
