--- a/src/styles/utils/mixins.scss
+++ b/src/styles/utils/mixins.scss
@@ -13,8 +13,20 @@
 @mixin constentPaddingInline() {
   margin-inline: 20px;
 
+  @media (min-width: 400px) {
+    margin-inline: 72px;
+  }
+
+  @media (min-width: 640px) {
+    margin-inline: 20px;
+  }
+
   @media (min-width: 744px) {
     margin-inline: 72px;
+  }
+
+  @media (min-width: 900px) {
+    margin-inline: 80px;
   }
 
   @media (min-width: 1260px) {
